syntax = "proto3";
package installed_micro_app;




import "micro_app_sdk/model/micro_app/installed_micro_app.proto";
import "google/protobuf/struct.proto";

/*
UpdateInstalledMicroAppStatus请求
*/
message UpdateInstalledMicroAppStatusRequest {
message MicroApp {
    /*
    状态
    */
    string status = 1 ;
}
        
    
    /*
    小产品id
    */
    string app_id = 1 ;
    /*
    要更新的小产品信息
    */
    MicroApp micro_app = 2 ;
}

/*
UpdateInstalledMicroAppStatusApi返回
*/
message UpdateInstalledMicroAppStatusResponseWrapper {
    /*
    返回码
    */
    int32 code = 1 ;
    /*
    返回码解释
    */
    string codeExplain = 2 ;
    /*
    错误详情
    */
    string error = 3 ;
    /*
    返回数据
    */
    micro_app.InstalledMicroApp data = 4 ;
}

